--- a/styles/main.css
+++ b/styles/main.css
@@ -22,24 +22,24 @@ body {
   font-family: var(--ff-body);
   font-size: var(--fs-sm);
   font-weight: var(--fw-400);
+  overflow-x: hidden;
 }
 
 .nav {
-  border: 1px solid #ccc;
   width: 100%;
   max-width: 320px;
   min-height: 100vh;
   padding: 1em 2em;
-}
-.nav__brand {
-  margin-bottom: 2em;
+  background: var(--clr-light);
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .nav__list {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5em;
   list-style: none;
   padding: 0;
-}
-.nav__item {
-  margin-bottom: 1.5em;
+  margin: 0;
 }
 .nav__link {
   color: var(--text-primary);
@@ -52,15 +52,34 @@ body {
 
 .mobile-nav-toggle {
   display: none;
-  position: absolute;
-  top: 1.5rem;
-  left: 1.5rem;
-  background: transparent;
-  border: none;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 35em) {
+  .nav {
+    position: fixed;
+    z-index: 1000;
+    inset: 0 0 0 0;
+    max-width: 320px;
+    padding-top: 2em;
+    /* Moving the navbar off the screen to the left. */
+    transform: translateX(-100%);
+    transition: transform 500ms ease-in-out;
+  }
+  .nav__brand {
+    margin-top: 1.5em;
+  }
+  .nav[data-visible=true] {
+    transform: translateX(0%);
+  }
   .mobile-nav-toggle {
     display: block;
+    position: absolute;
+    z-index: 9999;
+    width: 2rem;
+    aspect-ratio: 1;
+    top: 0.8rem;
+    left: 0.8rem;
+    background: transparent;
+    border: none;
   }
 }/*# sourceMappingURL=main.css.map */
