--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,9 +14,7 @@
   --fw-400: 400;
 }
 
-*,
-*::before,
-*::after {
+*, *::before, *::after {
   box-sizing: border-box;
 }
 
@@ -37,22 +35,22 @@ body {
 }
 
 .container {
-  width: 80%;
-  max-width: 1200px;
+  width: 100%;
+  max-width: 1000px;
   padding: 2em 0em;
+  margin: 0 auto;
 }
 
 .nav {
   position: sticky;
   inset: 0;
-  width: 100%;
-  max-width: 350px;
+  width: 100vw;
+  max-width: 320px;
   min-height: 100vh;
   padding: 1em 2em;
   background: var(--clr-light);
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
-
 .nav__list {
   display: flex;
   flex-direction: column;
@@ -61,11 +59,13 @@ body {
   padding: 0;
   margin: 0;
 }
-
 .nav-link {
   color: var(--text-primary);
   text-decoration: none;
   transition: all 300ms ease-in-out;
+}
+.nav-link:hover {
+  margin-left: 1rem;
 }
 
 .mobile-nav-toggle {
@@ -83,7 +83,7 @@ pre code {
   padding: 1rem;
 }
 
-@media (max-width: 35em) {
+@media (max-width: 50em) {
   .nav {
     position: fixed;
     z-index: 1000;
@@ -93,15 +93,12 @@ pre code {
     transform: translateX(-100%);
     transition: transform 500ms ease-in-out;
   }
-
   .nav__brand {
     margin-top: 1.5em;
   }
-
   .nav[data-visible=true] {
     transform: translateX(0%);
   }
-
   .mobile-nav-toggle {
     display: block;
     position: fixed;
@@ -113,6 +110,4 @@ pre code {
     background: transparent;
     border: none;
   }
-}
-
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
