--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -43,9 +43,10 @@ body {
 
 
 .container {
-  width: 80%;
-  max-width: 1200px;
+  width: 100%;
+  max-width: 1000px;
   padding: 2em 0em;
+  margin: 0 auto;
 }
 
 
@@ -53,8 +54,8 @@ body {
 .nav {
   position: sticky;
   inset: 0;
-  width: 100%;
-  max-width: 350px;
+  width: 100vw;
+  max-width: 320px;
   min-height: 100vh;
   padding: 1em 2em;
   background: var(--clr-light);
@@ -68,6 +69,7 @@ body {
     list-style: none;
     padding: 0;
     margin: 0;
+
   }
 
   &-link {
@@ -75,9 +77,10 @@ body {
     text-decoration: none;
     transition: all 300ms ease-in-out;
 
-    // &:hover {
-    //   padding-left: 1em;
-    // }
+
+    &:hover {
+      margin-left: 1rem;
+    }
   }
 }
 
@@ -99,7 +102,7 @@ pre code {
 
 
 
-@media (max-width: 35em) {
+@media (max-width: 50em) {
   .nav {
     position: fixed;
     z-index: 1000;
